update blank page between abstracts

--- a/sections/0-abstract.tex
+++ b/sections/0-abstract.tex
@@ -5,5 +5,7 @@
 This is the abstract
 
 
+% Add a blank page between the two abstracts
 \clearpage
-\includepdf[pages={2}]{assets/cover.pdf}
+\mbox{}
+\newpage
