--- a/src/trends.ipynb
+++ b/src/trends.ipynb
@@ -132,7 +132,7 @@
     "import re\n",
     "from qbstyles import mpl_style\n",
     "\n",
-    "mpl_style(dark=False)\n",
+    "mpl_style(dark=False, minor_ticks=False)\n",
     "\n",
     "data = pd.read_csv(\"data/trends.csv\")\n",
     "\n",
@@ -185,7 +185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.6"
   },
   "orig_nbformat": 2,
   "vscode": {
