--- a/config.sty
+++ b/config.sty
@@ -10,10 +10,7 @@
 \usepackage[final, nopatch=footnote]{microtype}     % Text justification
 \usepackage[hidelinks]{hyperref}  % Links in document
 \usepackage{breakcites}           % Linebreak citations
-% \usepackage[
-%   backend=bibtex, style=ieee, doi=false, url=false, isbn=false
-% ]{biblatex}
-\usepackage[super]{natbib}
+\usepackage[super]{natbib}        % Superscript citations
 \usepackage{setspace}             % Custom line spacing
 \usepackage{epstopdf}             % Convert .eps to .pdf for pdflatex compatability
 \usepackage{enumitem}             % Enable resuming of enumerated lists
